### Removed
- [TESTS] Remove old 'testing' folder
### Changed
- [SYSTEM] [SETTINGS] Use Hostname value from Django settings
- [PKI] Generate a random serial for each new certificate
- [API_PARSER] [VARONIS] Change the format of logs to avoid empty fields and to make the parsing easier
- [API_PARSER] [VARONIS] DElay next request when receiving 304 errors
### Fixed
- [SERVICES] [FRONTEND] Only show node field for specific modes
- [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
- [API_PARSER] [WAF_CLOUDFLARE] Fix invalid time range requested for UTC-* consoles
- [API_PARSER] [WAF_CLOUD_PROTECTOR] Catch invalid lines + fix timestamp handling
- [SYSTEM] [PKI] Missing SAN
- [SERVICES] Use 'onestatus' to establish if a service is running
- [SERVICES] [FILEBEAT] Improve how service and Filebeat processes' status are shown on GUI
- [BOOTSTRAP] Ensure GeoLite and timezone DBs are fetched/generated when bootstrapping a node


## [2.22.3] - 2025-03-21
### Fixed
- [API_PARSER] [CYBEREASON] Handle 204 return codes
- [API_PARSER] [CYBEREASON] Prevent crashes on empty comments, machines or users


## [2.22.2] - 2025-03-17
### Added
- [API_PARSER] Add loggers before the requests to make easier the debugging
- [API_PARSER] [VARONIS] New collector
### Changed
- [API_PARSER] [CISCO_MERAKI] Change common logger to warn instead of error
- [API_PARSER] [CORTEX_XDR] Use the 'local_insert_ts' field as time field for alerts
- [API_PARSER] [CORTEX_XDR] Bound requests with a 'to' parameter
### Fixed
- [API_PARSER] [CISCO_MERAKI] Fix bug when 'get_security_logs' is False
- [API_PARSER] [BEYONDTRUST_REPORTINGS] 'since' going up infinitely in some cases
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Ensure at least on type of logs is fetched in parameters
- [API_PARSER] [NETSKOPE] Reduce time ranges to 10 minutes max to avoid overflow in queries
- [API_PARSER] [CORTEX_XDR] Avoid missing logs when fetching pages by changing the 'since' filter